Puse un comnetario a ver si cambia algo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,6 +41,8 @@ body
     padding: lem;
 }
 
+/*Esto deberia estar en el master pero no lo está, voy a hacer un nuevo commit a ver qué*/
+
 #footer
 {
     background: #777;
